--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,7 +32,7 @@ plugins {
 apply plugin: 'solc-gradle-plugin'
 
 solc {
-    contracts = 'src/main/contract'
+    contracts = 'src/main/contract2/auth'
     pkg = 'com.webank.openledger.contracts2'
 }
 
